--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <scritp>document.addEventListener('touchstart', function(){}, {passive: false})</scritp>
+    <script>
+      
+      // document.addEventListener('touchstart', function(){}, {passive: false})</script>
   </body>
 </html>
