--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,8 @@
     <div id="root"></div>
     <script>
       
-      // document.addEventListener('touchstart', function(){}, {passive: false})</script>
+      document.addEventListener('touchstart', function(){}, {passive: false})
+      
+      </script>
   </body>
 </html>
